# DiffRhythm

./: pyproject.toml  requirements.txt
infer/: infer.py
scripts/: run_diffrhythm.sh
src/diffrhythm/: __init__.py
src/diffrhythm/g2p/g2p/: __init__.py  chinese_model_g2p.py  cleaners.py  mandarin.py
src/diffrhythm/infer/: infer.py  infer_utils.py
src/diffrhythm/model/: __init__.py  cfm.py  dit.py  trainer.py
