[project]
name = "diffrhythm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ziqian Ning" },
    { name = "Huakang Chen" },
    { name = "Yuepeng Jiang" },
    { name = "Chunbo Hao" },
    { name = "Guobin Ma" },
    { name = "Shuai Wang" },
    { name = "Jixun Yao" },
    { name = "Lei Xie" },
]
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.4.0",
    "bitsandbytes>=0.45.5",
    "cn2an==0.5.23",
    "ema-pytorch==0.7.7",
    "inflect==7.5.0",
    "jieba==0.42.1",
    "librosa==0.10.2.post1",
    "muq==0.1.0",
    "mutagen==1.47.0",
    "onnxruntime>=1.21.1",
    "pandas==2.2.3",
    "phonemizer==3.3.0",
    "prefigure==0.0.10",
    "py3langid>=0.3.0",
    "pyarrow==19.0.1",
    "pykakasi==2.3.0",
    "pylance==0.23.2",
    "pypinyin==0.53.0",
    "torchaudio==2.6.0",
    "torchdiffeq==0.2.5",
    "transformers==4.51.3",
    "unidecode==1.3.8",
    "x-transformers==2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
